# sdqcpy

./: README.md  README.zh-CN.md  example.py  pyproject.toml  tox.ini
.github/workflows/: publish_to_pypi.yml  tests.yml
src/sdqc_check/: __init__.py  utils.py
src/sdqc_check/causality/: __init__.py  causal_analysis.py
src/sdqc_check/classification/: __init__.py  classification_model.py  classify_model.py
src/sdqc_check/explainability/: __init__.py  base.py  lime.py  model_based.py  pfi.py  shap.py
src/sdqc_check/statistical_test/: __init__.py  base_statistical_test.py  categorical_test.py  correlation.py  numerical_test.py  utils.py
src/sdqc_data/: __init__.py  read_data.py
src/sdqc_data/data/: 1.csv  2.csv  3_raw.csv  3_synth.csv
src/sdqc_integration/: __init__.py  sequential.py
src/sdqc_integration/templates/: index.html  script.js  styles.css
src/sdqc_synthesize/: __init__.py  base_synthesizer.py  sdv_synthesizer.py  ydata_synthesizer.py
tests/: conftest.py
tests/test_sdqc_check/: test_utils.py
tests/test_sdqc_check/test_causality/: test_causal_analysis.py
tests/test_sdqc_check/test_classification/: test_classification_model.py
tests/test_sdqc_check/test_explainability/: test_explainability.py
tests/test_sdqc_check/test_statistical_test/: test_categorical_test.py  test_correlation.py  test_numerical_test.py  test_utils_data_type.py
tests/test_sdqc_integration/: test_sequential.py
tests/test_sdqc_synthesize/: test_sdv_synthesizer.py  test_ydata_synthesizer.py
