[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdqcpy"
version = "0.2.0"
description = "SDQCPy is a comprehensive Python package designed for synthetic data management, quality control, and validation."
authors = [
    {name = "T0217", email = "tianyanggong17@outlook.com"},
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
keywords = ["synthetic data", "data quality", "data validation", "data management"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tqdm>=4.60.0",
    "jinja2>=3.0.0",
    "gcastle>=1.0.0",
    "shap>=0.41.0",
    "lime>=0.2.0",
    "xgboost>=1.4.0",
    "lightgbm>=3.2.0",
    "ydata-synthetic>=1.0.0,<2.0.0",
    "sdv>=0.17.0",
]

[project.urls]
"Homepage" = "https://github.com/T0217/sdqcpy"
"Bug Tracker" = "https://github.com/T0217/sdqcpy/issues"

[project.optional-dependencies]
test = [
    "pytest>=6.2.0",
    "flake8>=4.0.0",
    "autopep8>=1.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
